[gd_scene load_steps=19 format=3 uid="uid://c65m1ue4yttei"]

[ext_resource type="FontFile" uid="uid://6lmyrnhkhyxw" path="res://utilities/fonts/Xolonium-Bold.ttf" id="1_mtobp"]
[ext_resource type="FontFile" uid="uid://bwb473dwjii4" path="res://utilities/fonts/AquireBold-8Ma60.otf" id="2_7gueh"]
[ext_resource type="PackedScene" uid="uid://1evckdaryyuw" path="res://scenes/levels/level1.tscn" id="2_to3n2"]
[ext_resource type="Script" path="res://scenes/utilities/inGameMenu.gd" id="3_4862k"]
[ext_resource type="PackedScene" uid="uid://cu681r6b4nv2y" path="res://scenes/levels/level2.tscn" id="3_f4wmh"]
[ext_resource type="PackedScene" uid="uid://bv86btewn5qeo" path="res://scenes/levels/level3.tscn" id="4_6mtee"]
[ext_resource type="PackedScene" uid="uid://de58m5ldo2fjr" path="res://scenes/levels/level4.tscn" id="5_yiqn6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_774l7"]
bg_color = Color(0.25, 0.25, 0.25, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_irpok"]
bg_color = Color(0.35, 0.35, 0.35, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3b3g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vo6d3"]
bg_color = Color(0.45, 0.45, 0.45, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xyuho"]
content_margin_left = 4.0
content_margin_top = 3.0
content_margin_right = 4.0
content_margin_bottom = 3.0
bg_color = Color(0.45, 0.45, 0.45, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kknyv"]
content_margin_left = 4.0
content_margin_top = 3.0
content_margin_right = 4.0
content_margin_bottom = 3.0
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ojxs0"]
content_margin_left = 4.0
content_margin_top = 3.0
content_margin_right = 4.0
content_margin_bottom = 3.0
bg_color = Color(0.35, 0.35, 0.35, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8tcah"]
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.7, 0.7, 0.7, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lq532"]
bg_color = Color(0.88, 0.88, 0.88, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.65, 0.65, 0.65, 1)

[sub_resource type="Theme" id="Theme_n36xo"]
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Button/colors/font_disabled_color = Color(0.65, 0.65, 0.65, 1)
Button/colors/font_focus_color = Color(1, 1, 1, 1)
Button/colors/font_hover_color = Color(1, 1, 1, 1)
Button/colors/font_hover_pressed_color = Color(0.88, 0.88, 0.88, 1)
Button/font_sizes/font_size = 45
Button/fonts/font = ExtResource("1_mtobp")
Button/styles/disabled = SubResource("StyleBoxFlat_774l7")
Button/styles/focus = SubResource("StyleBoxFlat_irpok")
Button/styles/hover = SubResource("StyleBoxFlat_g3b3g")
Button/styles/normal = SubResource("StyleBoxFlat_vo6d3")
Button/styles/pressed = SubResource("StyleBoxFlat_vo6d3")
HBoxContainer/constants/separation = 40
HSlider/styles/grabber_area = SubResource("StyleBoxFlat_xyuho")
HSlider/styles/grabber_area_highlight = SubResource("StyleBoxFlat_kknyv")
HSlider/styles/slider = SubResource("StyleBoxFlat_ojxs0")
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 0.666667)
Label/constants/shadow_offset_x = 2
Label/constants/shadow_offset_y = 2
Label/font_sizes/font_size = 80
Label/fonts/font = ExtResource("2_7gueh")
Label/styles/normal = SubResource("StyleBoxFlat_8tcah")
MarginContainer/constants/margin_bottom = 90
MarginContainer/constants/margin_left = 160
MarginContainer/constants/margin_right = 160
MarginContainer/constants/margin_top = 90
Panel/styles/panel = SubResource("StyleBoxFlat_lq532")
VBoxContainer/constants/separation = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_in7nl"]
bg_color = Color(0.88, 0.88, 0.88, 1)

[node name="InGameMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("3_4862k")
Lvl1 = ExtResource("2_to3n2")
Lvl2 = ExtResource("3_f4wmh")
Lvl3 = ExtResource("4_6mtee")
Lvl4 = ExtResource("5_yiqn6")

[node name="Timer" type="Timer" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_n36xo")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
process_mode = 3
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Panel" type="Panel" parent="Control/MarginContainer"]
layout_mode = 2

[node name="pauseMenu" type="MarginContainer" parent="Control/MarginContainer"]
process_mode = 3
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/pauseMenu"]
process_mode = 3
layout_mode = 2
alignment = 1

[node name="paused" type="Label" parent="Control/MarginContainer/pauseMenu/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="spacer" type="Panel" parent="Control/MarginContainer/pauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_in7nl")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/pauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="resume" type="Button" parent="Control/MarginContainer/pauseMenu/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "RESUME"

[node name="levels" type="Button" parent="Control/MarginContainer/pauseMenu/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "LEVELS"

[node name="options" type="Button" parent="Control/MarginContainer/pauseMenu/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="exit" type="Button" parent="Control/MarginContainer/pauseMenu/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "EXIT"

[node name="levelMenu" type="MarginContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/levelMenu"]
layout_mode = 2
alignment = 1

[node name="levels" type="Label" parent="Control/MarginContainer/levelMenu/VBoxContainer"]
layout_mode = 2
text = "LEVELS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="spacer" type="Panel" parent="Control/MarginContainer/levelMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_in7nl")

[node name="levelSelect" type="VBoxContainer" parent="Control/MarginContainer/levelMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect"]
layout_mode = 2
alignment = 1

[node name="1" type="Button" parent="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer"]
custom_minimum_size = Vector2(90, 80)
layout_mode = 2
text = "1
"

[node name="2" type="Button" parent="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer"]
custom_minimum_size = Vector2(90, 80)
layout_mode = 2
text = "2
"

[node name="3" type="Button" parent="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer"]
custom_minimum_size = Vector2(90, 80)
layout_mode = 2
text = "3
"

[node name="4" type="Button" parent="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer"]
custom_minimum_size = Vector2(90, 80)
layout_mode = 2
text = "4
"

[node name="5" type="Button" parent="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer"]
custom_minimum_size = Vector2(90, 80)
layout_mode = 2
disabled = true
text = "5
"

[node name="6" type="Button" parent="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer"]
custom_minimum_size = Vector2(90, 80)
layout_mode = 2
disabled = true
text = "6
"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect"]
layout_mode = 2
alignment = 1

[node name="7" type="Button" parent="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer2"]
custom_minimum_size = Vector2(90, 80)
layout_mode = 2
disabled = true
text = "7
"

[node name="8" type="Button" parent="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer2"]
custom_minimum_size = Vector2(90, 80)
layout_mode = 2
disabled = true
text = "8
"

[node name="9" type="Button" parent="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer2"]
custom_minimum_size = Vector2(90, 80)
layout_mode = 2
disabled = true
text = "9
"

[node name="10" type="Button" parent="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer2"]
custom_minimum_size = Vector2(90, 80)
layout_mode = 2
disabled = true
text = "10
"

[node name="11" type="Button" parent="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer2"]
custom_minimum_size = Vector2(90, 80)
layout_mode = 2
disabled = true
text = "11
"

[node name="12" type="Button" parent="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer2"]
custom_minimum_size = Vector2(90, 80)
layout_mode = 2
disabled = true
text = "12
"

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect"]
layout_mode = 2
alignment = 1

[node name="13" type="Button" parent="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer3"]
custom_minimum_size = Vector2(90, 80)
layout_mode = 2
disabled = true
text = "13
"

[node name="14" type="Button" parent="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer3"]
custom_minimum_size = Vector2(90, 80)
layout_mode = 2
disabled = true
text = "14
"

[node name="15" type="Button" parent="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer3"]
custom_minimum_size = Vector2(90, 80)
layout_mode = 2
disabled = true
text = "15
"

[node name="16" type="Button" parent="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer3"]
custom_minimum_size = Vector2(90, 80)
layout_mode = 2
disabled = true
text = "16
"

[node name="17" type="Button" parent="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer3"]
custom_minimum_size = Vector2(90, 80)
layout_mode = 2
disabled = true
text = "17
"

[node name="18" type="Button" parent="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer3"]
custom_minimum_size = Vector2(90, 80)
layout_mode = 2
disabled = true
text = "18
"

[node name="back" type="Button" parent="Control/MarginContainer/levelMenu/VBoxContainer"]
layout_mode = 2
text = "BACK"

[node name="optionsMenu" type="MarginContainer" parent="Control/MarginContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/optionsMenu"]
layout_mode = 2
alignment = 1

[node name="options" type="Label" parent="Control/MarginContainer/optionsMenu/VBoxContainer"]
layout_mode = 2
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="spacer" type="Panel" parent="Control/MarginContainer/optionsMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_in7nl")

[node name="volume" type="HBoxContainer" parent="Control/MarginContainer/optionsMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="labels" type="VBoxContainer" parent="Control/MarginContainer/optionsMenu/VBoxContainer/volume"]
layout_mode = 2
alignment = 1

[node name="master" type="Label" parent="Control/MarginContainer/optionsMenu/VBoxContainer/volume/labels"]
layout_mode = 2
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/font = ExtResource("1_mtobp")
theme_override_font_sizes/font_size = 45
text = " MASTER VOLUME "
horizontal_alignment = 1
vertical_alignment = 1

[node name="music" type="Label" parent="Control/MarginContainer/optionsMenu/VBoxContainer/volume/labels"]
layout_mode = 2
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/font = ExtResource("1_mtobp")
theme_override_font_sizes/font_size = 45
text = "MUSIC"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sfx" type="Label" parent="Control/MarginContainer/optionsMenu/VBoxContainer/volume/labels"]
layout_mode = 2
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/font = ExtResource("1_mtobp")
theme_override_font_sizes/font_size = 45
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sliders" type="VBoxContainer" parent="Control/MarginContainer/optionsMenu/VBoxContainer/volume"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 99
alignment = 1

[node name="master" type="HSlider" parent="Control/MarginContainer/optionsMenu/VBoxContainer/volume/sliders"]
layout_mode = 2

[node name="music" type="HSlider" parent="Control/MarginContainer/optionsMenu/VBoxContainer/volume/sliders"]
layout_mode = 2

[node name="sfx" type="HSlider" parent="Control/MarginContainer/optionsMenu/VBoxContainer/volume/sliders"]
layout_mode = 2

[node name="back" type="Button" parent="Control/MarginContainer/optionsMenu/VBoxContainer"]
layout_mode = 2
text = "BACK"

[connection signal="pressed" from="Control/MarginContainer/pauseMenu/VBoxContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Control/MarginContainer/pauseMenu/VBoxContainer/VBoxContainer/levels" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="Control/MarginContainer/pauseMenu/VBoxContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Control/MarginContainer/pauseMenu/VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer/6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer2/7" to="." method="_on_7_pressed"]
[connection signal="pressed" from="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer2/8" to="." method="_on_8_pressed"]
[connection signal="pressed" from="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer2/9" to="." method="_on_9_pressed"]
[connection signal="pressed" from="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer2/10" to="." method="_on_10_pressed"]
[connection signal="pressed" from="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer2/11" to="." method="_on_11_pressed"]
[connection signal="pressed" from="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer2/12" to="." method="_on_12_pressed"]
[connection signal="pressed" from="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer3/13" to="." method="_on_13_pressed"]
[connection signal="pressed" from="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer3/14" to="." method="_on_14_pressed"]
[connection signal="pressed" from="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer3/15" to="." method="_on_15_pressed"]
[connection signal="pressed" from="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer3/16" to="." method="_on_16_pressed"]
[connection signal="pressed" from="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer3/17" to="." method="_on_17_pressed"]
[connection signal="pressed" from="Control/MarginContainer/levelMenu/VBoxContainer/levelSelect/HBoxContainer3/18" to="." method="_on_18_pressed"]
[connection signal="pressed" from="Control/MarginContainer/levelMenu/VBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="Control/MarginContainer/optionsMenu/VBoxContainer/volume/sliders/master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="Control/MarginContainer/optionsMenu/VBoxContainer/volume/sliders/music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Control/MarginContainer/optionsMenu/VBoxContainer/volume/sliders/sfx" to="." method="_on_sfx_value_changed"]
[connection signal="pressed" from="Control/MarginContainer/optionsMenu/VBoxContainer/back" to="." method="_on_back1_pressed"]
